# workshop-vert

./: .gitignore  README.md  clean_code.md  makefile  pyproject.toml  requirements.txt
config/: settings.py
models/RandomForestRegressor/20250804/: model_params.json
src/: __init__.py  main.py
src/api/: __init__.py  models.py  routes.py
src/core/: __init__.py  business_logic.py  house_predictor.py
src/core/business/: __init__.py  business_logic.py  rules.py
src/core/ml_model/: __init__.py
src/core/ml_model/inference/: __init__.py  pre_process.py  regressor.py
src/core/ml_model/train/: data_gen.py  eval.py  hpo.py  pre_process.py  saver.py  train_handler.py  train_model.py
src/models/20250805/: scaler.pkl
src/models/20250805/RandomForestRegressor/: model_params.json
src/services/: __init__.py  house_predictor.py
src/utils/: __init__.py  utils.py
